# DPP-Fight-Bees

./: .gitignore  ArucoDistance.py  CalibrationResult.json  Config.json  README.md
ArucoDistance/: ArucoDistance.py  CalibrationResult.json  CameraCalibrator.py  Config.json  demo.py  main.py  utils.py
FetchingArucoMarks/: CMakeLists.txt  README.md  main.cpp  test.cpp
FetchingArucoMarks/include/: ArucoData.hpp  ArucoDetector.hpp  Server.hpp  VideoFrameFetcher.hpp
FetchingArucoMarks/include/interfaces/: IArucoDetector.hpp  IDistanceDetector.hpp  IFrameFetcher.hpp  IServer.hpp
MessageBroker/: main.py
Server/: main.py
